[package]
name = "countserver"
version = "0.1.0"
authors = ["Bart Massey <bart.massey@gmail.com>"]
edition = "2018"

[dependencies]
futures = "0.3.15"

[dependencies.async-stream]
version = "0.3.2"
optional = true

[dependencies.futures-core]
version = "0.3.15"
optional = true

[dependencies.futures-util]
version = "0.3.15"
optional = true

[dependencies.tokio]
version = "1.6.1"
features = ["net", "rt", "io-std", "io-util", "rt-multi-thread"]
optional = true

[dependencies.async-std]
version = "1.9.0"
optional = true

[features]
async-std-rt = ["async-std"]
tokio-rt = ["tokio", "async-stream", "futures-core", "futures-util"]
