[package]
name = "countserver"
version = "0.1.0"
authors = ["Bart Massey <bart.massey@gmail.com>"]
edition = "2021"

[dependencies]
futures = "0.3.21"

[dependencies.argwerk]
version = "0.20.0"
git = "http://github.com/BartMassey-upstream/argwerk"
branch = "pr-ed"

[dependencies.async-stream]
version = "0.3.2"
optional = true

[dependencies.futures-core]
version = "0.3.21"
optional = true

[dependencies.futures-util]
version = "0.3.21"
optional = true

[dependencies.tokio]
version = "1.17.0"
features = ["net", "rt", "io-std", "io-util", "rt-multi-thread"]
optional = true

[dependencies.async-std]
version = "1.10.0"
optional = true

[features]
async-std-rt = ["async-std"]
tokio-rt = ["tokio", "async-stream", "futures-core", "futures-util"]

[lib]
name = "args"
path = "src/lib.rs"
