[package]
name = "countserver"
version = "0.1.0"
authors = ["Bart Massey <bart.massey@gmail.com>"]
edition = "2021"

[dependencies]
futures = "0.3.21"

[dependencies.argwerk]
version = "0.20.1"

[dependencies.async-stream]
version = "0.3.2"

[dependencies.futures-core]
version = "0.3.21"

[dependencies.futures-util]
version = "0.3.21"

[dependencies.tokio]
version = "1.17.0"
features = ["net", "rt", "io-std", "io-util", "rt-multi-thread"]

[dependencies.async-std]
version = "1.10.0"
